--- a/kubecluster/templates/worker/kube-proxy.yaml
+++ b/kubecluster/templates/worker/kube-proxy.yaml
@@ -11,7 +11,7 @@ spec:
     command:
     - /hyperkube
     - proxy
-    - --master=${MASTER_HOST}
+    - --master=https://${MASTER_HOST}:6443
     - --kubeconfig=/etc/kubernetes/worker-kubeconfig.yaml
     securityContext:
       privileged: true
