--- a/kubecluster/templates/worker/kubeconfig.yaml
+++ b/kubecluster/templates/worker/kubeconfig.yaml
@@ -4,6 +4,7 @@ clusters:
 - name: local
   cluster:
     certificate-authority: /etc/kubernetes/ssl/ca.pem
+    server: https://${MASTER_HOST}:6443
 users:
 - name: kubelet
   user:
