--- a/kubecluster/templates/worker/kubelet.service
+++ b/kubecluster/templates/worker/kubelet.service
@@ -9,7 +9,8 @@ ExecStartPre=/usr/bin/mkdir -p /etc/kubernetes/manifests
 ExecStartPre=/usr/bin/mkdir -p /var/log/containers
 ExecStartPre=-/usr/bin/rkt rm --uuid-file=/var/run/kubelet-pod.uuid
 ExecStart=/usr/lib/coreos/kubelet-wrapper \
-  --api-servers=https://${MASTER_HOST} \
+  --address=0.0.0.0 \
+  --node-ip=${ADVERTISE_IP} \
   --cni-conf-dir=/etc/kubernetes/cni/net.d \
   --network-plugin=${NETWORK_PLUGIN} \
   --container-runtime=docker \
